WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
39778
[Qt] CookieJarQt.cpp has coding-style errors
https://bugs.webkit.org/show_bug.cgi?id=39778
Summary
[Qt] CookieJarQt.cpp has coding-style errors
Anders Bakken
Reported
2010-05-26 13:37:38 PDT
WebCore/platform/qt/CookieJarQt.cpp:37: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/CookieJarQt.cpp:38: Alphabetical sorting problem. [build/include_order] [4] WebCore/platform/qt/CookieJarQt.cpp:48: Declaration has space between type name and * in Frame *frame [whitespace/declaration] [3] WebCore/platform/qt/CookieJarQt.cpp:51: Declaration has space between type name and * in FrameLoader *loader [whitespace/declaration] [3] WebCore/platform/qt/CookieJarQt.cpp:125: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 5 in 1 files
Attachments
Patch that fixes the coding style issues
(1.84 KB, patch)
2010-05-26 14:46 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
Patch
(1.93 KB, patch)
2010-06-04 20:22 PDT
,
Anders Bakken
no flags
Details
Formatted Diff
Diff
Patch
(2.12 KB, patch)
2011-01-07 12:12 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Anders Bakken
Comment 1
2010-05-26 14:46:34 PDT
Created
attachment 57159
[details]
Patch that fixes the coding style issues
Petri Ojala
Comment 2
2010-05-26 21:52:16 PDT
Qt, QtTriaged
David Levin
Comment 3
2010-05-27 11:12:28 PDT
Comment on
attachment 57159
[details]
Patch that fixes the coding style issues
> No new tests. (OOPS!)
Ditto.
Anders Bakken
Comment 4
2010-06-04 20:22:41 PDT
Created
attachment 57954
[details]
Patch
Eric Seidel (no email)
Comment 5
2010-06-04 22:11:26 PDT
Comment on
attachment 57954
[details]
Patch Seems silly to not just make this a one-line function call now: QNetworkCookieJar* jar = cookieJar(document); 125 return (jar != 0); 125 return jar; You could use !!cookieJar(document) to make it clear that your'e returnign a bool if you like.
David Levin
Comment 6
2010-06-14 11:32:19 PDT
Comment on
attachment 57954
[details]
Patch Please consider Eric's comment.
Benjamin Poulain
Comment 7
2011-01-07 11:41:27 PST
Anders, what is the status of this?
Benjamin Poulain
Comment 8
2011-01-07 12:12:41 PST
Created
attachment 78255
[details]
Patch
Kenneth Rohde Christiansen
Comment 9
2011-01-07 12:14:08 PST
Comment on
attachment 78255
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=78255&action=review
> WebCore/platform/qt/CookieJarQt.cpp:117 > - return networkAccessManager(document); > + return !!networkAccessManager(document);
It this in the coding style guide?
Andreas Kling
Comment 10
2011-01-07 12:15:35 PST
Comment on
attachment 78255
[details]
Patch Oh, let's answer Kenneth's question first.
Benjamin Poulain
Comment 11
2011-01-07 12:17:48 PST
(In reply to
comment #9
)
> > WebCore/platform/qt/CookieJarQt.cpp:117 > > - return networkAccessManager(document); > > + return !!networkAccessManager(document); > > It this in the coding style guide?
No, it was to address Eric Seidel comment (
comment 5
).
WebKit Commit Bot
Comment 12
2011-01-08 16:47:54 PST
Comment on
attachment 78255
[details]
Patch Clearing flags on attachment: 78255 Committed
r75334
: <
http://trac.webkit.org/changeset/75334
>
WebKit Commit Bot
Comment 13
2011-01-08 16:48:01 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug