2011-01-08  Benjamin Poulain  <benjamin.poulain@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] CookieJarQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=39778

        Improve the coding style of CookieJarQt.cpp.

        * platform/qt/CookieJarQt.cpp:
        (WebCore::networkAccessManager):
        (WebCore::cookiesEnabled):

Canonical link: https://commits.webkit.org/65648@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@75334 268f45cc-cd09-0410-ab3c-d52691b4dbfc